--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
                         <div class="col-md-8">
                             <h1>Contact</h1>
                             <div id="body">
-                                <p>You can email me at datascientistswithoutbordersto@gmail.com</p>
+                                <p>You can email us at datascientistswithoutbordersto@gmail.com</p>
                             </div>
                         </div>
                         <div class="col-md-4" id="toc-wrapper">
