--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 
     </head>
 
-    <body style="background: #ffffff url('images/portrait-min.jpg') no-repeat center center fixed;-moz-background-size:cover;-webkit-background-size:cover;-o-background-size:cover;background-size:cover; min-width: 394px;">
+    <body style="background: #ffffff url('images/TorontoDataScientistsWithoutBordersLogo.png') no-repeat center center fixed;-moz-background-size:cover;-webkit-background-size:cover;-o-background-size:cover;background-size:cover; min-width: 394px;">
         <div id="wrap">
             <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
                 <div class="container">
@@ -89,7 +89,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand active" href="./" id="home">colah's blog</a>
+                        <a class="navbar-brand active" href="./" id="home">Toronto Data Scientists without Borders</a>
                     </div>
                     <!--normal header-->
                     <div class="navbar-collapse collapse">
