--- a/about.html
+++ b/about.html
@@ -107,11 +107,11 @@
             <div class="profile">
                 <h2 >Toronto Data Scientists without Borders</h2>
 
-                <p>We are fostering a collaborative and mutual nuturing community by:</p>
+                <p><h3>We are fostering a collaborative and mutual nuturing community by:</h3></p>
                 
-                <p>- hosting Machine Learning/Deep Learing reading discussion group every other Tuesday: provide links of our members' video summary about the reading discussion sessions</p>
+                <p>- <h6>hosting Machine Learning/Deep Learing reading discussion group every other Tuesday: provide links of our members' video summary about the reading discussion sessions</h6></p>
                 
-                <p>- hosting interviews with research pioneers, entrepreneurs in Machine Learning/Deep Learning</p>
+                <p>- hosting interviews with research pioneers, entrepreneurs in the Machine Learning/Deep Learning community</p>
 
                 <p style="text-align:center;"><a href="cv.pdf">Academic CV</a> - <a href="https://github.com/TorontoDataScientistsWithoutBorder/">Github</a> - <a href="https://twitter.com/yueharriet">Twitter</a> - <a href="https://www.meetup.com/Toronto-Machine-Learning-Book-Club/">Our Meetup Group</a></p>
 
