--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
             <div class="profile">
                 <h2 >Toronto Data Scientists without Borders</h2>
 
-                <p><h3>We are fostering a collaborative and mutual nuturing community by:</h3></p>
+                <h3>We are fostering a collaborative and mutual nuturing community by:</h3>
                 
                 <p>- <h6>hosting Machine Learning/Deep Learing reading discussion group every other Tuesday: provide links of our members' video summary about the reading discussion sessions</h6></p>
                 
