--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
 
                 <h3>We are fostering a collaborative and mutual nuturing community by:</h3>
                 
-                <p>- <h6>hosting Machine Learning/Deep Learing reading discussion group every other Tuesday: provide links of our members' video summary about the reading discussion sessions</h6></p>
+                <h6>hosting Machine Learning/Deep Learing reading discussion group every other Tuesday: provide links of our members' video summary about the reading discussion sessions</h6>
                 
                 <p>- hosting interviews with research pioneers, entrepreneurs in the Machine Learning/Deep Learning community</p>
 
