--- a/contact.html
+++ b/contact.html
@@ -87,6 +87,8 @@
                             <h1>Contact</h1>
                             <div id="body">
                                 <p>You can email us at datascientistswithoutbordersto@gmail.com</p>
+                                <h3> Member Lists </h3>
+                                <p> Yue Harriet Huang: Data Scienitst @ Healthcare Industry, <a href="https://yue1harriet1huang.github.io/">Website</a>
                             </div>
                         </div>
                         <div class="col-md-4" id="toc-wrapper">
