--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
                             <div id="body">
                                 <p>You can email us at datascientistswithoutbordersto@gmail.com</p>
                                 <h3> Member Lists </h3>
-                                <p> Yue Harriet Huang: Data Scienitst @ Healthcare Industry, <a href="https://yue1harriet1huang.github.io/">Website</a>
+                                <p> Yue Harriet Huang, data scienitst @ healthcare industry: <a href="https://yue1harriet1huang.github.io/">Website</a>
                             </div>
                         </div>
                         <div class="col-md-4" id="toc-wrapper">
