--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Contact - Toronto Data Scientists without Borders</title>
+        <title>Contact - Toronto Machine Learning Circles</title>
         
         <link rel="stylesheet" href="./fonts/Serif/cmun-serif.css" />
         <link rel="stylesheet" href="./fonts/Serif-Slanted/cmun-serif-slanted.css" />
@@ -66,7 +66,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand active" href="./" id="home">Toronto Data Scientists without Borders</a>
+                        <a class="navbar-brand active" href="./" id="home">Toronto Machine Learning Circles</a>
                     </div>
                     <!--normal header-->
                     <div class="navbar-collapse collapse">
